--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "eosjs": "^22.1.0",
     "eosjs-api": "^7.0.4",
     "eosjs-ecc": "^4.0.7",
+    "eosjs-account-name": "^2.2.1",
     "express": "^4.17.1",
     "fastify": "^3.29.0",
     "hdkey": "^1.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "kwiz": "^3.0.0",
     "momentjs": "^2.0.0",
     "mongodb": "^4.1.2",
     "mongoose": "^6.3.4",
@@ -44,6 +47,7 @@
     "pm2": "^5.2.0",
     "request": "^2.88.2",
     "string-to-file-stream": "^1.3.0",
+    "tar-fs": "^2.1.1",
     "telegraf": "^4.8.1",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
