--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastify/bearer-auth": "^7.0.1",
+    "@mtproto/core": "6.2.0",
     "@tiptap/extension-bold": "^2.0.0-beta.26",
     "@tiptap/extension-code-block": "^2.0.0-beta.37",
     "@tiptap/extension-document": "^2.0.0-beta.15",
@@ -31,9 +32,9 @@
     "dotenv": "^16.0.1",
     "eos-encrypt": "^1.0.2",
     "eosjs": "^22.1.0",
+    "eosjs-account-name": "^2.2.1",
     "eosjs-api": "^7.0.4",
     "eosjs-ecc": "^4.0.7",
-    "eosjs-account-name": "^2.2.1",
     "express": "^4.17.1",
     "fastify": "^3.29.0",
     "hdkey": "^1.1.1",
@@ -49,6 +50,7 @@
     "string-to-file-stream": "^1.3.0",
     "tar-fs": "^2.1.1",
     "telegraf": "^4.8.1",
+    "telegram": "^2.9.10",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
     "unicore": "github:dacom-core/unicoreJS#v1.0.1",
