--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tar-fs": "^2.1.1",
     "telegraf": "^4.8.1",
     "telegram": "^2.9.10",
+    "tgcalls-next": "^0.0.0-rc.18",
     "tiptap": "^1.32.2",
     "tiptap-extensions": "^1.35.2",
     "unicore": "github:dacom-core/unicoreJS#v1.0.1",
