--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eosjs-ecc": "^4.0.7",
     "express": "^4.17.1",
     "fastify": "^3.29.0",
+    "fs": "^0.0.1-security",
     "hdkey": "^1.1.1",
     "jsonwebtoken": "^8.5.1",
     "kwiz": "^3.0.0",
