--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fastify/bearer-auth": "^7.0.1",
     "@mtproto/core": "6.2.0",
+    "@octokit/rest": "^19.0.4",
     "@tiptap/extension-bold": "^2.0.0-beta.26",
     "@tiptap/extension-code-block": "^2.0.0-beta.37",
     "@tiptap/extension-document": "^2.0.0-beta.15",
@@ -46,6 +47,7 @@
     "mongoose": "^6.3.4",
     "node-csv": "^0.1.2",
     "node-fetch": "^2.6.1",
+    "octokit": "^2.0.7",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
     "string-to-file-stream": "^1.3.0",
