--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "node-csv": "^0.1.2",
     "node-fetch": "^2.6.1",
     "octokit": "^2.0.7",
+    "openai": "^3.1.0",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
     "string-to-file-stream": "^1.3.0",
