--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@tiptap/starter-kit": "^2.0.0-beta.183",
     "atob": "^2.1.2",
     "axios": "^0.27.2",
+    "binance": "^2.2.9",
     "bip39": "^3.0.2",
     "btoa": "^1.2.1",
+    "bybit-api": "^3.3.8",
     "csv-parse": "^5.0.4",
     "csv-stringify": "^6.0.5",
     "dotenv": "^16.0.1",
@@ -40,7 +42,9 @@
     "fastify": "^3.29.0",
     "fs": "^0.0.1-security",
     "hdkey": "^1.1.1",
+    "huobi-api-js": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
+    "kucoin-node-api": "^2.1.5",
     "kwiz": "^3.0.0",
     "momentjs": "^2.0.0",
     "mongodb": "^4.1.2",
@@ -48,6 +52,7 @@
     "node-csv": "^0.1.2",
     "node-fetch": "^2.6.1",
     "octokit": "^2.0.7",
+    "okx-api": "^1.0.1",
     "openai": "^3.1.0",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
