--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^8.5.1",
     "kucoin-node-api": "^2.1.5",
     "kwiz": "^3.0.0",
+    "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "mongodb": "^4.1.2",
     "mongoose": "^6.3.4",
